# TFG_DGS

./: README.md  c_cpp_properties.json
MAIN_MODULE/main/: CMakeLists.txt  HTTP_SERVER_task.c  LORA_RECEIVER_task.c  MODBUS_RECEIVER_task.c  MODBUS_RECEIVER_task.h  WIFI_SMARTCONFIG_task.c  config.h  main.c  main.h
MAIN_MODULE/main/libraries/: HTTP_SERVER.c  LORA.c  MODBUS_MASTER.c  MODBUS_MASTER.h  WIFI_SMARTCONFIG.c  modbus_params.h
main/: CMakeLists.txt  MODBUS_RECEIVER_task.c  OLED_DISPLAY_task.c  config.h  main.c
main/libraries/: MODBUS_MASTER.c  MODBUS_MASTER.h
